--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 				Generate new shitpost
 			</button>
 			<br>
-			<a id = "leTweet" class="twitter-share-button" target = "_blank">
-				Tweet
-			</a>
 			<input type="text" value="Hello World" id="toCopy">
 
-        	<button onclick="copyToClipboard()">Copy shitpost</button>
-        	<button onclick="downloadAsPng(document.querySelector('#shitpost'))">Download shitpost</button>
-        	<button id="copyAsImage" onclick="copyAsPng(document.querySelector('#shitpost'))">Copy as image</button>
-
+			<div id="buttons">
+				<a id = "leTweet" class="button" target = "_blank">Tweet</a>
+	        	<button class="right button" onclick="copyToClipboard()">Copy to clipboard</button>
+	        	<br>
+	        	<button class="button" id="copyAsImage" onclick="copyAsPng(document.querySelector('#shitpost'))">Copy as image</button>
+	        	<button class="right button" onclick="downloadAsPng(document.querySelector('#shitpost'))">Download shitpost</button>
+	        </div>
 		</div>
 
 	</body>
@@ -24,36 +24,25 @@
 	<script>
 		//Big todo:
 		/*
-		-Changing screenshot name
-
-		-Formattage pour mobile
-		-Corriger la grammaire, plural et is a bit of
-		-Consideration: plusieurs emojis?
-		-Consideration: le yet
-		-Consideration: consideration
-		-Save screenshot button
-		-Copy to clipboard
-		-Random couleur de peau et gender
-
-		-Le stack
+		-Random couleur de peau et gender (in progress)
 		*/
 
 		//101
-		var subjects = ["Britney Spears", "Monogamy", "Pikachu", "Canada", "Video games", "Twitter", "Memes", "Drag queens", "Therapy", "Love", "Education", "Sex", "Capitalism", "Communism", "NFTs", "Bimbos", "Patriarchy", "PowerPoint", "Jesus", "Making games", "Flirting", "Freedom", "Getting tattooed", "Kissing", "Living", "Gender", "Falling in love", "Everything", "Nothing", "Trying your best", "Working full-time", "Having kids", "Going outside","Failure", "Success", "Making friends", "Murder", "Astrology", "Doing the right thing", "Improving yourself","Being attractive", "Veganism", "Shitposting", "Self-care", "Your mom", "Breaking the law", "Being alone", "Taxes", "Rent", "Pumpkin spice latte", "Consent", "Threesomes", "Being an adult", "Harry Potter", "Star Wars", "Exercising", "Nintendo", "Universal healthcare", "Knowing your rights", "Admitting your mistakes", "Knowing your limits", "Drinking", "Stepping out of your comfort zone", "Elon Musk", "Spider-Man", "Getting called out", "Attending a family gathering", "Garfield", "Gossiping", "Climate changes", "Pineapple on pizza", "Productivity", "Being true to yourself", "Dogs", "Opening up", "You", "Solidarity", "Feminism", "Happiness", "The Beatles", "Manifesting", "Your feelings", "Following your dreams", "Listening to your instincts", "Marvel", "Disney", "Lesbians", "Bottoms", "Science", "Good people", "Polyamory", "True crimes podcasts", "Drinking coffee", "Hoarding money", "Booty calls", "Believing in yourself", "Burning out", "Getting a tongue-split", "Making out", "Karaoke", "Eggnog", "Imposter syndrome", "Being cute", "The government"];
+		var subjects = ["Booty calls", "Lesbians", "Bottoms", "True crimes podcasts", "Your feelings", "The Beatles", "You", "Dogs", "Threesomes", "Taxes", "NFTs", "Bimbos", "Drag queens", "Memes", "Video games", "Britney Spears", "Monogamy", "Pikachu", "Canada", "Twitter", "Therapy", "Love", "Education", "Sex", "Capitalism", "Communism",  "Patriarchy", "PowerPoint", "Jesus", "Making games", "Flirting", "Freedom", "Getting tattooed", "Kissing", "Living", "Gender", "Falling in love", "Everything", "Nothing", "Trying your best", "Working full-time", "Having kids", "Going outside","Failure", "Success", "Making friends", "Murder", "Astrology", "Doing the right thing", "Improving yourself","Being attractive", "Veganism", "Shitposting", "Self-care", "Your mom", "Breaking the law", "Being alone",  "Rent", "Pumpkin spice latte", "Consent",  "Being an adult", "Harry Potter", "Star Wars", "Exercising", "Nintendo", "Universal healthcare", "Knowing your rights", "Admitting your mistakes", "Knowing your limits", "Drinking", "Stepping out of your comfort zone", "Elon Musk", "Spider-Man", "Getting called out", "Attending a family gathering", "Garfield", "Gossiping", "Climate change", "Pineapple on pizza", "Productivity", "Being true to yourself",  "Opening up",  "Solidarity", "Feminism", "Happiness",  "Manifesting",  "Following your dreams", "Listening to your instincts", "Marvel", "Disney",  "Science", "Good people", "Polyamory",  "Drinking coffee", "Hoarding money",  "Believing in yourself", "Burning out", "Getting a tongue-split", "Making out", "Karaoke", "Imposter syndrome", "Being cute", "The government"];
 
 		//10
-        var verbs = ["is", "is", "is not", "is not", "can be", "can't be", "should be","shouldn't be","is always", "is never", "is a bit", "is pretty much"];
+        var verbs = ["is a bit", "is", "is", "is not", "is not", "can be", "can't be", "should be","shouldn't be","is always", "is never",  "is pretty much"];
 
         //104
-        var complements = ["weird", "real", "canceled", "illegal", "fun", "surreal", "complicated" ,"a spectrum", "limitless", "the endgame", "mandatory", "normalized", "valid", "vegan", "a struggle" ,"magical", "sexy", "a red flag", "a hoax", "acceptable", "healthy", "a relief", "a social construct", "easy", "obsolete", "beautiful", "gay", "a mood", "overrated", "underrated", "legit", "a thing", "on the table", "allowed", "kinky", "fundamental", "a commitment", "addictive", "woke", "awful", "romantic", "random", "a blessing", "right", "wrong", "better than expected", "the worst", "interesting", "political", "a lifestyle", "a good habit", "a bad habit", "a coping mechanism", "my favorite thing", "a statement", "shitty", "dull", "ethical", "harmless", "offensive", "enough", "natural", "misunderstood", "tolerated", "meh", "an issue", "frowned upon", "trendy", "therapy", "free", "flawless", "a right", "a duty", "a privilege", "taught in school", "for everyone", "nationalized", "ironic", "sustainable", "compensated", "all you do", "a threat", "platonic", "edgy", "trash", "celebrated", "painful", "revolutionary", "transgressive", "important", "scary", "yummy", "toxic", "goals", "acknowledged", "seen", "fatal", "hereditary", "radical", "an act of resistance", "horny", "so 2004", "clever", "mainstream", "epic", "taboo", "problematic", "a waste of time", "cute", "a mistake"];
+        var complements = ["weird", "real", "canceled", "illegal", "fun", "surreal", "complicated" ,"a spectrum", "limitless", "the endgame", "mandatory", "normalized", "valid", "vegan", "a struggle" ,"magical", "sexy", "a red flag", "a hoax", "acceptable", "healthy", "a relief", "a social construct", "easy", "obsolete", "beautiful", "gay", "a mood", "overrated", "underrated", "legit", "a thing", "on the table", "allowed", "kinky", "fundamental", "a commitment", "addictive", "woke", "awful", "romantic", "random", "a blessing", "right", "wrong", "better than expected", "the worst", "interesting", "political", "a lifestyle", "a good habit", "a bad habit", "a coping mechanism", "my favorite thing", "a statement", "shitty", "dull", "ethical", "harmless", "offensive", "enough", "natural", "misunderstood", "tolerated", "meh", "an issue", "frowned upon", "trendy", "therapy", "free", "flawless", "a right", "a duty", "a privilege", "taught in school", "for everyone", "nationalized", "ironic", "sustainable", "compensated", "all you do", "a threat", "platonic", "edgy", "trash", "celebrated", "painful", "revolutionary", "transgressive", "important", "scary", "yummy", "toxic", "goals", "acknowledged", "fatal", "hereditary", "radical", "an act of resistance", "horny", "so 2004", "clever", "mainstream", "epic", "taboo", "problematic", "a waste of time", "cute", "a mistake", "relatable", "lit", "a mean to an end"];
 
         //Anatomical heart? Le monkey qui se cache les yeux
         //45
-        var emojis = ["👌","🍆", "✨", "🔥", "😅", "🌈", "🤖", "💖", "😬", "🤔", "😈", "😍", "👀", "💦", "💯", "😐", "💩", "😤", "🙄", "😳", "😱", "😏", "😭", "😟", "🚩", "🤯", "🤫", "🤷" ,"🤨", "😠", "🙏", "🥺", "🥴", "💅", "🍑", "🤦", "🙌", "🥰", "🤘", "😩", "😒", "💀", "🙈", "😘"];
-
-        var shitpostStackOrQueue = "";
+        var emojis = [["🤦🏻‍♀","🤦🏽‍♀", "🤦🏿‍♀", "🤦🏾‍♀", "🤦🏼‍♀", "🤦‍♀", "🤦🏻‍♂", "🤦🏽‍♂","🤦🏿‍♂", "🤦🏾‍♂", "🤦🏼‍♂", "🤦‍♂"],["🤷🏻‍♀","🤷🏽‍♀", "🤷🏿‍♀", "🤷🏾‍♀", "🤷🏼‍♀", "🤷‍♀", "🤷🏻‍♂","🤷🏽‍♂", "🤷🏿‍♂", "🤷🏾‍♂", "🤷🏼‍♂", "🤷‍♂"],["🙌🏻","🙌", "🙌🏽", "🙌🏿", "🙌🏾", "🙌🏼"],["👌🏻","👌", "👌🏽", "👌🏿", "👌🏾", "👌🏼"],["🍆"], ["✨"], ["🔥"], ["😅"], ["🌈"], ["🤖"], ["💖"], ["😬"], ["🤔"], ["😈"], ["😍"], ["👀"], ["💦"], ["💯"], ["😐"], ["💩"], ["😤"], ["🙄"], ["😳"], ["😱"], ["😏"], ["😭"], ["😟"], ["🚩"], ["🤯"], ["🤫"] ,["🤨"], ["😠"], ["🙏🏻","🙏", "🙏🏽", "🙏🏿", "🙏🏾", "🙏🏼"], ["🥺"], ["🥴"], ["💅🏻","💅", "💅🏽", "💅🏿", "💅🏾", "💅🏼"], ["🍑"], ["🥰"], ["🤘🏻","🤘", "🤘🏽", "🤘🏿", "🤘🏾", "🤘🏼"], ["😩"], ["😒"], ["💀"], ["🙈"], ["😘"], ["😎"], ["🥵"], ["💔"]];
 
         document.querySelector("#generateShitpostBtn").onclick = generateShitpost;
+
+        var imageName = "";
 
         try{
             ClipboardItem;
@@ -62,12 +51,45 @@
         }
 
         generateShitpost();
-        function generateShitpost(){
-        	console.log(emojis.length);
 
-        	var currentShitpost = pickARandomElement(subjects) + " " + pickARandomElement(verbs) + " " 
-        		+ pickARandomElement(complements) + " " + pickARandomElement(emojis);
-        	console.log(currentShitpost);
+        function generateShitpost(){
+        	//console.log(emojis.length);
+
+        	var randomIndexSubjects = pickARandomElement(subjects);
+        	var randomIndexVerbs = pickARandomElement(verbs);
+        	var randomIndexComplements = pickARandomElement(complements);
+        	var randomIndexEmojis = pickARandomElement(emojis);
+
+        	var isPlural = randomIndexSubjects < 15;
+        	var emojiList = emojis[randomIndexEmojis];
+
+        	var currentShitpost = subjects[randomIndexSubjects] + " " + verbs[randomIndexVerbs] + " " + complements[randomIndexComplements];
+        	if(Math.floor(Math.random()* 10) < 1)
+        	{
+        		var addIts = + isPlural?"":"it's ";
+        		currentShitpost += " yet " + addIts + complements[pickARandomElement(complements)];
+        	}
+        	currentShitpost += " " + emojiList[pickARandomElement(emojiList)];
+
+        	imageName = subjects[randomIndexSubjects];
+
+        	if(isPlural && currentShitpost.includes(" is "))
+        	{
+        		currentShitpost = currentShitpost.replace(" is ", " are ");
+        	}
+
+        	if(currentShitpost.includes("a bit") && complements[randomIndexComplements].includes("a "))
+        	{
+        		currentShitpost = currentShitpost.replace("a bit", "a bit of");
+        	}
+
+        	//Add funky variations
+
+        	if(Math.floor(Math.random()* 10) < 1)
+        	{
+        		var addEmoji = emojis[pickARandomElement(emojis)]
+        		currentShitpost += addEmoji[pickARandomElement(addEmoji)];
+        	}
 
         	document.querySelector("#shitpost").innerHTML = currentShitpost;
         	document.querySelector("#leTweet").href = "https://twitter.com/intent/tweet?text=" + currentShitpost;
@@ -77,7 +99,7 @@
         }
 
         function pickARandomElement(arrayToPickFrom){
-        	return arrayToPickFrom[Math.floor(Math.random() * arrayToPickFrom.length)];
+        	return Math.floor(Math.random() * arrayToPickFrom.length);
         }
 
         function copyToClipboard() {
@@ -95,7 +117,7 @@
                 // Create a link
                 var aDownloadLink = document.createElement('a');
                 // Add the name of the file to the link
-                aDownloadLink.download = 'shitpost.png';
+                aDownloadLink.download = imageName + ".png";
                 // Attach the data to the link
                 aDownloadLink.href = image;
                 // Get the code to click the download link
@@ -121,21 +143,37 @@
     	}
 
     	button#generateShitpostBtn {
- 			font-size: 50px;
+ 			font-size: 60px;
  			margin-top: 50px;
     		padding: 10px;
     		display: inline-block;
+    		font-weight: bold;
 		}
 
-		a#leTweet {
+		#buttons{
+			text-align: left;
+			display: inline-block;
+			min-width: 700px;
+			margin-left: 32px;
+		}
+
+		.right{
+			float: right;
+			margin-right: 32px;
+		}
+
+		a#leTweet{
+    		color: blue;
+		}
+
+		.button {
 			margin-top: 35px;
-    		font-size: 50px;
+    		font-size: 40px;
     		background-color: #efefef;
     		border: 1px solid rgb(118 118 118);
     		padding: 10px;
     		text-decoration: none;
     		display: inline-block;
-    		color: blue;
 		}
 		#toCopy{
             display: none;
